vpc_endpoint.tf
resource "aws_vpc_endpoint" "s3" {
  vpc_id       = aws_vpc.myapp-vpc.id
  service_name = "com.amazonaws.us-east-1.s3"

  tags = local.env_tags
}
